--- a/app/src/main/res/layout/activity_tv_show.xml
+++ b/app/src/main/res/layout/activity_tv_show.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".mvvm.presentation.tv.TvShowActivity">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_tvShow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            app:titleTextColor="@color/white"
+            android:background="#1A237E"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_tvShow"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_tvShow" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_tvShow"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:alpha="0.9"
+            android:elevation="10dp"
+            android:indeterminate="true"
+            android:indeterminateBehavior="repeat"
+            android:indeterminateTint="#1976D2"
+            android:indeterminateTintMode="src_atop"
+            android:keepScreenOn="true"
+            android:layerType="software"
+            android:max="100"
+            android:mirrorForRtl="true"
+            android:scrollIndicators="end"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerView_tvShow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/recyclerView_tvShow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
