--- a/app/src/main/res/layout/activity_artist.xml
+++ b/app/src/main/res/layout/activity_artist.xml
@@ -10,6 +10,18 @@
         android:layout_height="match_parent"
         tools:context=".mvvm.presentation.artist.ArtistActivity">
 
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_artist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            app:titleTextColor="@color/white"
+            android:background="#1A237E"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_artist"
             android:layout_width="0dp"
@@ -17,7 +29,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_artist">
 
         </androidx.recyclerview.widget.RecyclerView>
 
